cupid: rootdir: Fix the battery drain due to statsd...?
 - Could it really be so simple?

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -193,5 +193,9 @@ on early-boot && property:persist.vendor.pcie.boot_option=*
     write /sys/bus/platform/devices/1c08000.qcom,pcie/debug/boot_option ${persist.vendor.pcie.boot_option}
 
 on property:sys.boot_completed=1
+
+    # Stop statsd draining battery
+    stop statsd
+
     enable vendor.qvirtmgr
     start  vendor.qvirtmgr
