--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -146,5 +146,10 @@
             android:permission="RefreshService">
         </service>
 
+        <service
+            android:name=".display.ColorService"
+            android:permission="ColorService">
+        </service>
+
     </application>
 </manifest>
