cupid: rootdir: Move background cpuset to CPU0-1
Background tasks are not UX-critical.
Free up cores to work on more important
UX tasks.

Change-Id: I6af49187f27caa98fd708efffd9d4c7dca65a444

--- a/rootdir/etc/init.xiaomi_sm8450.rc
+++ b/rootdir/etc/init.xiaomi_sm8450.rc
@@ -249,6 +249,9 @@ on property:vendor.audio.cit.spkcal.copy=true
     chmod 666 /mnt/vendor/persist/audio/aw_calr.bin
     chmod 666 /mnt/vendor/persist/audio/aw_calr.txt
 
+    # Set background cpuset
+    write /dev/cpuset/background/cpus 0-1
+
 service vendor.nv_mac /vendor/bin/nv_mac
     class late_start
     user system
