cupid: rootdir: Set restricted cpuset to the same CPUs as system-background
system-background should only include efficiency cores
and restricted should do the same in order to save
power while the screen is off. Copy system-background
CPUs instead of hardcoding to account for platforms
with varying numbers of efficiency cores.

Change-Id: I3a46190a2fa76eb1e9061a605c6a2e74006975de
Signed-off-by: dopaemon <polarisdp@gmail.com>

--- a/rootdir/etc/init.xiaomi_sm8450.rc
+++ b/rootdir/etc/init.xiaomi_sm8450.rc
@@ -249,6 +249,10 @@ on property:vendor.audio.cit.spkcal.copy=true
     chmod 666 /mnt/vendor/persist/audio/aw_calr.bin
     chmod 666 /mnt/vendor/persist/audio/aw_calr.txt
 
+on property:vendor.post_boot.parsed=1
+    # Set restricted cpuset to the same CPUs as system-background
+    copy /dev/cpuset/system-background/cpus /dev/cpuset/restricted/cpus
+
     # Set background cpuset
     write /dev/cpuset/background/cpus 0-1
 
